<resources>
    <string name="app_name">Lagerverwalung</string>
    <string name="suche">Suche...</string>
    <string name="hinzuf_gen">Hinzufügen</string>
    <string name="entfernen">Entfernen</string>
    <string name="einkauf_vorschau">Einkauf Vorschau</string>
    <string name="neu">Neu</string>
    <string name="vorschau">Vorschau</string>
    <string name="lade_excel">Lade Excel</string>
    <string name="comment">Comment :</string>
    <string name="threshold">Threshold :</string>
    <string name="number">Number :</string>
    <string name="name">Name :</string>
</resources>
