<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/searchField"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hinzuf_gen" />

            <Button
                android:id="@+id/removeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entfernen" />
        </LinearLayout>

        <TextView
            android:id="@+id/previewField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vorschau" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/shoppingListBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/einkauf_vorschau" />

            <Button
                android:id="@+id/newBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neu" />

            <Button
                android:id="@+id/addExcel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lade_excel"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>