<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_root"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text">
        </EditText>

        <TextView
            android:id="@+id/labelNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"/>

        <EditText
            android:id="@+id/numberInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number">
        </EditText>

        <TextView
            android:id="@+id/thresholdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threshold" />

        <EditText
            android:id="@+id/thresholdInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number">
        </EditText>

        <TextView
            android:id="@+id/commentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:inputType="text"/>

        <EditText
            android:id="@+id/commentInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10">
        </EditText>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>